Fri Apr  8 14:30:52 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp

	Regenerated handlers to reflect schema changes.
	
	* docs/schema/cdp.xsd

	Updated schema to allow 0 on the realizes element.
	
Fri Apr  8 13:33:24 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Added backend support for attribute exceptions.

Thu Apr 07 14:49:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/examples/Hello/descriptors/basicNodeDaemon.pl
	* DAnCE/examples/Hello/descriptors/runNodeDaemons.pl

	  Removed the first file and added the second file since
	  the name of the first file doens't make any sense. These
	  two files are the same.

	* DAnCE/examples/BasicSP/descriptors/flattern_deploymentplan.cdp
	* DAnCE/examples/BasicSP/descriptors/flattened_deploymentplan.cdp

	  Removed the first file and added the second file since
	  the name of the first file contained a typo.

	* DAnCE/examples/Hello/descriptor/Modified_Deployment.xsd

	  Changed the <deploymentPlan> tag to allow zero <realizes>
	  tag in the XML.

	* DAnCE/Config_Handlers/DP_Handler.cpp
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp

	  Modified handlers to accomodate the above change.

	* DAnCE/examples/Hello/descriptors/flattened_deploymentplan.cdp

	  Added this file in, which is a flattened deployment plan for
	  for the Hello example. I will come back to remove the <realizes>
	  tag some time later since it is useless.

	* DAnCE/examples/Hello/step-by-step.html

	  Bring the documentation page up to date.

Wed Apr 06 11:12:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/examples/BasicSP/descriptors/flattern_deploymentplan.cdp

	  Cleaned this a little bit. Removed most <SupportedType> and 
	  <port> tags from the <realizes> tag.

Wed Apr 06 10:30:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
